--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elenis-dirt",
+  "name": "django-react-boilerplate",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8000",
@@ -10,7 +10,7 @@
     "@types/react-dom": "16.9.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "typescript": "3.7.2"
   },
   "scripts": {
