--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -13,13 +9,19 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
+    // "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "sourceMap": true,
+    "noImplicitAny": true,
   },
   "include": [
-    "src"
-  ]
+    "src",
+    ".post/"
+  ],
+
+  // "include": ["./app/**/*"]
 }
